--- a/catalog/templates/home.html
+++ b/catalog/templates/home.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="/style.css" >
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="menu-block bg-dark">
@@ -67,7 +70,7 @@
      <ul class="fixed-bottom p-0 user_menu">
         <li class="nav-item dropdown"  data-bs-theme="light">
           <a class="nav-link dropdown-toggle  text-white-50 d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <div class="user_avatar"><img src="../img/user.avif" width="100%"></div>
+            <div class="user_avatar"><img src="{% static 'img/user.avif' %}" width="100%"></div>
 
               <span class=" p-3 user_menu_txt">Пользователь</span>
           </a>
