--- a/catalog/templates/contact.html
+++ b/catalog/templates/contact.html
@@ -5,16 +5,33 @@
     {% include 'menu.html' %}
 
 
+
     <div class="fon"><div class=" container-lg">
+
         <div class="title">
             <h1>Контакты</h1>
         </div>
+                {% if request.status_post %}
+            <div  id="top-alert" class=" alert alert-success alert-dismissible fade show" role="alert">
+
+                Ваше сообщение отправлено!
+               <script>
+                  document.addEventListener('DOMContentLoaded', () => {
+                    setTimeout(() => {
+                      const alert = bootstrap.Alert.getOrCreateInstance('#top-alert');
+                      alert.close();
+                    }, 3000);
+                  });
+                </script>
+            </div>
+        {% endif %}
         <div class="row  gx-5">
             <div class="col-12 col-sm-5  py-2">
                 <div class="card text-bg-secondary">
                     <div class="card-body">
                         <h2>Отправить сообщение</h2>
-                        <form action="/" method="POST">
+                        <form action="/contact/" method="POST">
+                            {% csrf_token %}
                             <div class="mb-3">
                                 Имя
                                 <input type="text" name="name" class="form-control" placeholder="">
@@ -26,7 +43,7 @@
 
                             <div class="mb-3">
                                 Сообщение
-                                <textarea class="form-control" name="txt" placeholder="" rows="3"></textarea>
+                                <textarea class="form-control" name="message" placeholder="" rows="3"></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary w-100">Отправить</button>
                         </form>
