--- a/catalog/templates/contacts.html
+++ b/catalog/templates/contacts.html
@@ -30,7 +30,7 @@
                 <div class="card text-bg-secondary">
                     <div class="card-body">
                         <h2>Отправить сообщение</h2>
-                        <form action="/contact/" method="POST">
+                        <form action="/contacts/" method="POST">
                             {% csrf_token %}
                             <div class="mb-3">
                                 Имя
