--- a/catalog/static/css/style.css
+++ b/catalog/static/css/style.css
@@ -31,7 +31,10 @@
     }
     .dropdown-menu{width: 250px;}
 
-
+.showcase_img {width:100%; max-width:150px; margin: auto;}
+.showcase_img img {width:100%; }
+.carousel-control-prev, .carousel-control-next {border: 0;
+    background: transparent;}
 
    .title {text-align: center;
     padding: 50px 10px 10px 10px;}
@@ -89,4 +92,14 @@
 .user_menu_txt  {display: none;}
 .user_menu {width: 70px; padding:0}
 .user_menu.a{padding: 5px}
+.product_description {display: none;}
+}
+
+@media (max-width: 768px)
+{
+.showcase_col_3 {display: none;}
+}
+@media (max-width: 564px)
+{
+.showcase_col_2 {display: none;}
 }
