--- a/catalog/static/css/style.css
+++ b/catalog/static/css/style.css
@@ -41,12 +41,17 @@
 
 /* Витрина продуктов */
     .showcase_product { border: 1px solid #bbb; border-radius: 10px; min-height: 250px; padding-bottom: 20px; margin-bottom: 30px;}
+    .showcase_product > a{color: #000000;  text-decoration: none;}
+
     .showcase_product_title {width: 100%;
     background: #eee;
     border-radius: 10px 10px 0 0;
     padding: 10px;
     text-align: center;
     font-weight: 600;}
+    .carousel-control-next-icon, .carousel-control-prev-icon {background-color: #444;    height: 30px;    width: 30px;
+    background-size: 70%;    border-radius: 15px;}
+    .carousel-control-prev, .carousel-control-next {width: 60px}
 
     .product_price {width: 100%;
     font-size: 20pt;
@@ -61,9 +66,22 @@
     border: 2px solid #3290ff;
     border-radius: 5px;
     margin: 0 auto;
-    color: #3290ff;
+    color: #fff;
     font-weight: 600;
     padding: 5px 0 6px 0;}
+
+
+/* КАТЕГОРИИ  */
+    .category { border: 1px solid #bbb; border-radius: 10px; min-height: 250px; padding-bottom: 20px; margin-bottom: 30px;}
+    .category > a{color: #000000;  text-decoration: none;}
+.category_img {width:100%; }
+.category_img img {width:100%; }
+.category_title {width: 100%;
+    background: #eee;
+    border-radius: 10px 10px 0 0;
+    padding: 10px;
+    text-align: center;
+    font-weight: 600;}
 
     /* КАТАЛОГ  */
 
@@ -92,7 +110,7 @@
 .user_menu_txt  {display: none;}
 .user_menu {width: 70px; padding:0}
 .user_menu.a{padding: 5px}
-.product_description {display: none;}
+/*.product_description {display: none;}*/
 }
 
 @media (max-width: 768px)
