--- a/catalog/templates/product_one_category.html
+++ b/catalog/templates/product_one_category.html
@@ -8,8 +8,7 @@
     <div class=" container-lg">
 
         <div class="title  d-flex  flex-column justify-content-center">
-            <h1>Цифровая техника </h1>
-            <p>Продажа техники: ноутбуки, телевизоры, смартфоны, планшеты, умные часы, фитнес-браслеты и другие гаджеты.</p>
+            <h1> {{ title }} </h1>
         </div>
 
         <!-- тут будет все товары -->
