--- a/catalog/templates/catalog/category_list.html
+++ b/catalog/templates/catalog/category_list.html
@@ -17,7 +17,7 @@
             <div class="col-6 col-sm-4 col-lg-3 col-xl-3">
                 <div class="category">
 
-                        <a href="/category/{{ category.id }}" >
+                        <a href="/products/?category={{ category.id }}" >
                             <div class="category_title">{{ category.category_name }}</div>
                             <div class="category_img">
                                 {% if category.image  %}
