--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -16,7 +16,7 @@
 
         {% include 'pagination.html' %}
 
-        {% include 'products.html' %}
+        {% include 'catalog/products.html' %}
 
         {% include 'pagination.html' %}
 
@@ -25,7 +25,7 @@
 
         <div class="row gx-5 p-3 ">
             <div class="d-flex justify-content-center"><h3>Последние поступления</h3></div>
-            {% include 'showcase_product.html' %}
+            {% include 'catalog/showcase_product.html' %}
         </div>
 
     </div>
