--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -26,7 +26,7 @@
         <div class="row gx-5 p-3 ">
           <div class="d-flex justify-content-center"><h3 >Последние поступления</h3></div>
 
-            {% include 'showcase_product.html' %}
+            {% include 'catalog/showcase_product.html' %}
 
         </div>
 
