--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -11,6 +11,9 @@
             <h1>Цифровая техника </h1>
             <p>Продажа техники: ноутбуки, телевизоры, смартфоны, планшеты, умные часы, фитнес-браслеты и другие гаджеты.</p>
         </div>
+        {% if perms.app_name.change_article %}
+            <a class="btn btn-primary" href="catalog:create">Добавить товар</a>
+        {% endif %}
 
         <!-- тут будет все товары -->
 
