--- a/catalog/templates/pagination.html
+++ b/catalog/templates/pagination.html
@@ -6,7 +6,7 @@
         {% endif %}
 
         <span class="current">
-            стр. {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}.
+            стр. {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
         </span>
 
         {% if page_obj.has_next %}
