--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -14,25 +14,26 @@
             </div>
             <div class="col-6">
                         {% if perms.app_name.change_article %}
-                            <a class="btn btn-primary" href="{% url 'catalog:edit' product.id %} ">Редактировать товар</a>
-                             <a class="btn btn-primary" href="{% url 'catalog:delete' product.id %} ">Удалить</a>
+                <form method="POST">
+                    {% csrf_token %}
+                <p>Действительно удалить {{ product.name }}</p>
+                <button type="submit" class="btn btn-primary">Удалить</button>
+                <a href="{% url 'catalog:product' %}" class="btn btn-secondary">Отмена</a>
+                </form>
+
+
                         {% endif %}
+
                 <p>{{ product.description  | safe }}</p>
               <div class="product_price">{{ product.price }} ₽</div>
 
-                        <a href="#" class="btn btn-primary button_in_basket d-block">Купить</a>
+
             </div>
           </div>
 
 
 
 
-        <div class="row gx-5 p-3 ">
-          <div class="d-flex justify-content-center"><h3 >Последние поступления</h3></div>
-
-            {% include 'catalog/showcase_product.html' %}
-
-        </div>
 
     </div>
 </div>
