--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -12,7 +12,7 @@
             <p>Продажа техники: ноутбуки, телевизоры, смартфоны, планшеты, умные часы, фитнес-браслеты и другие гаджеты.</p>
         </div>
         {% if perms.app_name.change_article %}
-            <a class="btn btn-primary" href="catalog:create">Добавить товар</a>
+            <a class="btn btn-primary" href="{% url 'catalog:create' %}">Добавить товар</a>
         {% endif %}
 
         <!-- тут будет все товары -->
