--- a/catalog/templates/menu.html
+++ b/catalog/templates/menu.html
@@ -80,8 +80,10 @@
                 <span class=" p-3 user_menu_txt">Пользователь</span>
             </a>
             <ul class="dropdown-menu bg-secondary">
+                <li><a class="dropdown-item" href="/login">Вход</a></li>
+                <li><a class="dropdown-item" href="/signup">Регистрация</a></li>
                 <li><a class="dropdown-item" href="#">Профиль</a></li>
-                <li><a class="dropdown-item" href="#">Выход</a></li>
+                <li><a class="dropdown-item" href="/logout">Выход</a></li>
             </ul>
         </li>
     </ul>
