--- a/catalog/templates/menu.html
+++ b/catalog/templates/menu.html
@@ -75,15 +75,30 @@
         <li class="nav-item dropdown" data-bs-theme="light">
             <a class="nav-link dropdown-toggle  text-white-50 d-flex align-items-center" href="#" role="button"
                data-bs-toggle="dropdown" aria-expanded="false">
+                {% if user.is_authenticated %}
                 <div class="user_avatar"><img src="{% static 'img/user.avif' %}" width="100%"></div>
-
                 <span class=" p-3 user_menu_txt">Пользователь</span>
+                {% else %}
+                <span class=" p-3 user_menu_txt">Авторизация</span>
+                {% endif %}
             </a>
             <ul class="dropdown-menu bg-secondary">
-                <li><a class="dropdown-item" href="/login">Вход</a></li>
-                <li><a class="dropdown-item" href="/signup">Регистрация</a></li>
-                <li><a class="dropdown-item" href="#">Профиль</a></li>
-                <li><a class="dropdown-item" href="/logout">Выход</a></li>
+                {% if not user.is_authenticated %}
+                <li><a class="dropdown-item" href="{% url 'users:login' %}">Вход</a></li>
+                <li><a class="dropdown-item" href="{% url 'users:signup' %}">Регистрация</a></li>
+                {% else %}
+                <li>
+
+                     <a href="{% url 'users:profile' user.pk %}" class="dropdown-item">Профиль</a>
+                </li>
+                <li>
+                    <form method="post" action="{% url 'users:logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="dropdown-item">Выход</button>
+                    </form>
+
+                </li>
+                {% endif %}
             </ul>
         </li>
     </ul>
