--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -23,7 +23,7 @@
                             <li>Аватарка: {{ object.avatar }}</li>
 
                         </ul>
-                    <a href="{% url 'users:login' %}" class="btn btn-sm btn-primary">Редактировать профиль</a>
+                    <a href="{% url 'users:profile_edite'  %}" class="btn btn-sm btn-primary">Редактировать профиль</a>
                     </div>
 
 
