--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -11,9 +11,9 @@
             <h1>Блог о цифровой техники </h1>
             <p>Все что хотели знать про ноутбуки, телевизоры, смартфоны, планшеты, умные часы, фитнес-браслеты и другие гаджеты.</p>
         </div>
-
+            {% if user.is_authenticated %}
             <a class="btn btn-primary" href="{% url 'blog:create' %}">Добавить товар</a>
-
+            {% endif %}
 
         <!-- тут будет все товары -->
 
