--- a/catalog/static/css/style.css
+++ b/catalog/static/css/style.css
@@ -107,7 +107,7 @@
 
 .form_sm {margin: 0 auto;
     max-width: 450px;}
-
+.navbar-collapse{overflow: visible; margin-top: 10px;}
 
      @media (max-width: 991px) {
 .fon {    padding-left: 60px;}
