--- a/catalog/templates/head.html
+++ b/catalog/templates/head.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <!--<script src="{% static 'js/jquery.min.js' %}"></script>-->
 
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
