--- a/users/templates/profile_edite.html
+++ b/users/templates/profile_edite.html
@@ -17,7 +17,12 @@
                  <p>E-mail:
                  {{ form.email }}
                  </p>
-                 <img src="{{ object.avatar.url }}" width="100" height="100"/>
+
+                 {% if user.avatar %}
+                        <div class="user_avatar"><img src="/media/{{ user.avatar }}" width="100%"></div>
+                    {% else %}
+                        <div style="background: #444;width: 100px;"><img src="/media/avatars/no_user.png" width="100" ></div>
+                    {% endif %}
                  <p>Аватарка:<br />
 
 
