--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -4,12 +4,14 @@
 
 <div class="fon">
     <div class=" container-lg">
+        <div class="title  d-flex  flex-column justify-content-center">
+            <h2>Войти</h2>
+        </div>
 
-        <h2>Войти</h2>
-              <form method="post">
+              <form method="post"  class="form_sm_login">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Войти</button>
+                <button class="btn btn-primary" type="submit">Войти</button>
               </form>
 
 
