--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -4,12 +4,14 @@
 
 <div class="fon">
     <div class=" container-lg">
+        <div class="title  d-flex  flex-column justify-content-center">
+            <h2>Регистрация</h2>
+        </div>
 
-        <h2>Регистрация</h2>
-              <form method="post">
+              <form method="post" class="form_sm">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Зарегистрироваться</button>
+                <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
               </form>
 
 
