--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col-6">
 
-                            {% if user.is_authenticated %}
+                            {% if user.pk == product.owner_id  or user.is_staff or perms.catalog.can_unpublish_product %}
                             <a class="btn btn-primary" href="{% url 'catalog:edit' product.id %} ">Редактировать товар</a>
                             <a class="btn btn-primary" href="{% url 'catalog:delete' product.id %} ">Удалить</a>
                             {% endif %}
