--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -6,7 +6,7 @@
     <div class=" container-lg">
 
         <div class="title">
-            <h1>Создать новый товар</h1>
+            <h1>Редактировать товар</h1>
         </div>
         <div class="d-flex justify-content-center">
             <form method="POST" enctype="multipart/form-data">
